src/objects/PS_KA_Template__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_ID__c</fullName>
        <label>Knowledge ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order_Template__c</fullName>
        <label>Work Order Template</label>
        <referenceTo>PS_Work_Order_Template__c</referenceTo>
        <relationshipLabel>KA Templates</relationshipLabel>
        <relationshipName>KA_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>KA Template</label>
    <nameField>
        <displayFormat>KA_TMP_{00000}</displayFormat>
        <label>KA Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KA Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>